plugins {
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'groovy'
    id "com.github.ben-manes.versions" version "0.53.0"
}

group = 'no.novari'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    maven { url = "https://repo.fintlabs.no/releases" }
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencyManagement {
    dependencies {
        // Azure Cosmos DB server version 3.6 :-(
        dependency 'org.mongodb:mongodb-driver-sync:5.1.4'
        dependency 'org.mongodb:mongodb-driver-core:5.1.4'
        dependency 'org.springframework.data:spring-data-mongodb:4.3.10'
        dependency 'org.mongodb:bson:5.1.4'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'no.fint:fint-altinn-model:3.0.2'

    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    implementation 'io.projectreactor.addons:reactor-extra'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }

    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.spockframework:spock-spring:2.4-groovy-4.0'
    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring3x:4.24.0'
    // Fix CVE-2025-48924 (de.flapdoodle.embed) and friends
    implementation("org.apache.commons:commons-lang3:3.18.0")
    implementation("com.fasterxml.jackson.core:jackson-core:2.21.1")

    testImplementation 'com.squareup.okhttp3:mockwebserver:5.3.2'
    testImplementation 'com.squareup.okhttp3:okhttp:5.3.2'
    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:2.1.0'

    implementation 'com.itextpdf:itext-core:9.6.0'

    implementation 'no.novari:fint-felles-resource-model-java:4.0.30'
    implementation 'no.novari:fint-arkiv-resource-model-java:4.0.30'
    implementation 'no.fint:fint-model-resource:0.4.1'
}
